@@ -1,3 +1,8 @@
+2010-11-30  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* operation/agentes/estado_ultimopaquete.php: fixed when the string data of
+	module is number.
+
 2010-11-29  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/help/ja/help_operation_visual_console.php: Added a new
